--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
       <div>
         <h1 class="text-4xl font-heading font-extrabold tracking-tight text-brand-dark flex items-center gap-3">
           <span class="p-3 bg-brand-primary/10 rounded-2xl"><i class="fas fa-wallet text-brand-primary"></i></span>
-          Meyza <span class="text-brand-primary">Finance</span>
+          Mey <span class="text-brand-primary">Finance</span>
         </h1>
       </div>
       
